[Fixed]white space nowrap error, bottom button text align, safari img height error

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   justify-content: center;
-  text-align: center;
+  display: flex;
 }
 .main-box{
   max-width: 680px;
